# mcp-ariel-memory

./: .ai-memory.toml  .coderabbit.yaml  .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN_MCP_UPGRADE.md  PLAN_PRODUCTION.md  README.md  README_EN.md  ROADMAP.md  SECURITY.md  __init__.py  __main__.py  config.py  config.yaml  demo.py  docker-compose.yml  mcp_server.py  mkdocs.yml  openapi.yaml  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  coderabbit.yaml  dependabot.yml  labeler.yml  release-drafter.yml  release.yml  test_coderabbit.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-label.yml  auto-merge-dependabot.yml  ci.yml  codeql.yml  commit-lint.yml  detect-secrets.yml  docs.yml  release-drafter.yml  release.yml  repo-visualizer.yml  stale.yml
core/: __init__.py  episodic.py  memory.py  reflex.py  session.py
docs/: 00-index.md  01-architecture.md  02-mcp-tools.md  03-core.md  04-rag.md  05-graph.md  06-lifecycle.md  07-hooks.md  08-wiki.md  09-features.md  10-shared.md  11-operations.md  12-testing.md  changelog.md  contributing.md  index.md  process-rules.md
docs/api/: importance.md  memory-types.md  secrets.md
docs/architecture/: connection.md  diagrams.md  layers.md  overview.md
docs/core/: episodic.md  memory.md  reflex.md  session.md
docs/features/: auth.md  backup.md  circuit-breaker.md  compression.md  dedup.md  privacy.md  rate-limiting.md  secrets.md  token-budget.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/hooks/: system.md
docs/lifecycle/: overview.md
docs/operations/: deployment.md  monitoring.md  testing.md
docs/rag/: conflict.md  engine.md  quantize.md  router.md  scoring.md
docs/tools/: reference.md
docs/wiki/: agent-wiki.md  file-wiki.md  overview.md  user-wiki.md
features/: __init__.py  audit_trail.py  auth.py  backup.py  backup_cron.py  compression.py  dashboard.py  import_export.py  rate_limiting.py  secrets.py  typed_export.py
graph/: __init__.py  epistemic.py  temporal.py
hooks/: __init__.py  agent_hooks.py  registry.py  shared.py  user_hooks.py
lifecycle/: __init__.py  consolidation.py  emotion_trigger.py  forgetting.py  importance_scheduler.py
mcp_server/: __init__.py  models.py  registry.py  schema.py  server.py  tools_layer.py  tools_ops.py
mcp_server/utils/: __init__.py  circuit_breaker.py  privacy.py
npm/: README.md  bin.js  index.js  install.js  server.json
rag/: __init__.py  chunking.py  conflict.py  engine.py  multi_source.py  quantize.py  router.py  scoring.py  search.py
scripts/: generate_docs.py
shared/: __init__.py  archived_memories.py  cache.py  connection.py  constants.py  db_pool.py  dream_buffer.py  embeddings.py  importance.py  memory_types.py  metrics.py  middleware.py  migrations.py  migrations_saga_log.py  path_safety.py  read_only.py  saga.py  saga_crypto.py  План перехода на aiosqlite.md
tests/: benchmark_memory.py  benchmark_perf.py  conftest.py  test_all.py  test_auth_backup.py  test_auth_crypto.py  test_conflict_bm25.py  test_features_coverage.py  test_hypothesis.py  test_importance_middleware.py  test_importance_scheduler.py  test_importance_v2.py  test_integration.py  test_memory_types.py  test_mib_quantize.py  test_multi_source.py  test_rag_binary_search.py  test_rag_chunking.py  test_rag_no_legacy_api.py  test_rag_scoring.py  test_rag_search_facade.py  test_router_improvements.py  test_saga_behavior.py  test_saga_compensation.py  test_saga_idempotency.py  test_saga_retry.py  test_secrets.py  test_threshold_training.py  test_tools_layer.py  test_tools_ops.py  test_typed_consolidation.py  test_typed_forgetting.py
tests/test_core/: test_core.py
tests/test_features/: test_backup_path_safety.py  test_features.py  test_import_export_path_safety.py
tests/test_graph/: test_graph.py
tests/test_hooks/: test_hooks.py
tests/test_lifecycle/: test_forgetting_edge.py  test_lifecycle.py
tests/test_mcp/: test_mcp.py  test_tools_e2e.py  test_tools_ops_e2e.py  test_tools_unit.py
tests/test_rag/: test_rag.py  (+1 more)
wiki/: __init__.py  agent_wiki.py  file_wiki.py  manager.py  shared.py  user_wiki.py
(+14 files in other folders)
