[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ariel-memory"
version = "0.1.0"
description = "Universal Two-Layer Memory MCP Server for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ariel Memory Team" }
]
keywords = ["mcp", "memory", "ai-agent", "llm", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.27,<2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
vec = [
    "sqlite-vec>=0.1",
]
all = [
    "mcp-ariel-memory[dev,vec]",
]

[project.scripts]
ariel-memory = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/ariel-memory/mcp-ariel-memory"
Repository = "https://github.com/ariel-memory/mcp-ariel-memory"
Issues = "https://github.com/ariel-memory/mcp-ariel-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
