[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ariel-memory"
version = "1.0.0"
description = "Universal Two-Layer Memory MCP Server for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ariel Memory Team" }
]
keywords = ["mcp", "memory", "ai-agent", "llm", "knowledge-graph", "rag", "wiki"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.27,<2",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "hypothesis>=6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
win = [
    "aiosqlite>=0.21.0,!=0.22.0",
]
binary = [
    "numpy>=1.24",
]
vec = [
    "sqlite-vec>=0.1",
]
ann = [
    "hnswlib>=0.7",
]
all = [
    "mcp-ariel-memory[dev,win,binary,vec,ann]",
]

[project.scripts]
ariel-memory = "mcp_server.server:main"
mcp-ariel-memory = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/Cipher208/mcp-ariel-memory"
Repository = "https://github.com/Cipher208/mcp-ariel-memory"
Issues = "https://github.com/Cipher208/mcp-ariel-memory/issues"
Documentation = "https://github.com/Cipher208/mcp-ariel-memory/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30
filterwarnings = [
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::DeprecationWarning:features.auth",
]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "E722", "E712", "F841", "F811", "UP031", "UP035"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.skylos]
exclude = [".repowise", ".codegraph", "docs", "__pycache__"]

[tool.skylos.quality]
max_complexity = 15
max_lines = 100
max_args = 6

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
